Add the sql-file submodule